test/corpus/guards.txt
==================
Lock, access through the guard, release
==================

let draw = (ctx: mem.Shared[Context]) => null {
    let guard <- ctx
    guard.counter = guard.counter + 1
    guard -> ctx
}

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (parameter_list
        (parameter
          (identifier
            (simple_identifier))
          (type_or_object
            (generic_type
              (child_annotation
                (simple_identifier)
                (simple_identifier))
              (type_or_object
                (identifier
                  (simple_identifier)))))))
      (type_or_object
        (type
          (null)))
      (block_expression
        (lock
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))
        (field_assignment
          (child_annotation
            (simple_identifier)
            (simple_identifier))
          (expression
            (binary_expression
              (expression
                (child_annotation
                  (simple_identifier)
                  (simple_identifier)))
              (expression
                (literal
                  (number
                    (integer)))))))
        (release
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))))))

==================
Typed local holding a shared value
==================

let main = () => null {
    let ctx: mem.Shared[Context] = Context.new()
    let n: i32 = 5
}

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (parameter_list)
      (type_or_object
        (type
          (null)))
      (block_expression
        (local_assignment
          (identifier
            (simple_identifier))
          (type_or_object
            (generic_type
              (child_annotation
                (simple_identifier)
                (simple_identifier))
              (type_or_object
                (identifier
                  (simple_identifier)))))
          (expression
            (child_annotation
              (simple_identifier)
              (function_call
                (user_function_call
                  (identifier
                    (simple_identifier)))))))
        (local_assignment
          (identifier
            (simple_identifier))
          (type_or_object
            (type))
          (expression
            (literal
              (number
                (integer)))))))))

==================
Generic types with several arguments, and lists of them
==================

let f = (m: Map[str, i32], l: mem.Shared[i32][]) => null {}

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (parameter_list
        (parameter
          (identifier
            (simple_identifier))
          (type_or_object
            (generic_type
              (identifier
                (simple_identifier))
              (type_or_object
                (type))
              (type_or_object
                (type)))))
        (parameter
          (identifier
            (simple_identifier))
          (type_or_object
            (type
              (list_type
                (type_or_object
                  (generic_type
                    (child_annotation
                      (simple_identifier)
                      (simple_identifier))
                    (type_or_object
                      (type)))))))))
      (type_or_object
        (type
          (null)))
      (block_expression))))

==================
Less than a negative number is not a lock
==================

let f = (x: i32) => bool x<-1

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (parameter_list
        (parameter
          (identifier
            (simple_identifier))
          (type_or_object
            (type))))
      (type_or_object
        (type))
      (expression
        (binary_expression
          (expression
            (identifier
              (simple_identifier)))
          (expression
            (unary_expression
              (expression
                (literal
                  (number
                    (integer)))))))))))

==================
Lock with a guard type
==================

let f = (ctx: mem.Weak[Context]) => null {
    let guard: mem.WeakGuard[Context] <- ctx
    guard -> ctx
}

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (parameter_list
        (parameter
          (identifier
            (simple_identifier))
          (type_or_object
            (generic_type
              (child_annotation
                (simple_identifier)
                (simple_identifier))
              (type_or_object
                (identifier
                  (simple_identifier)))))))
      (type_or_object
        (type
          (null)))
      (block_expression
        (lock
          (identifier
            (simple_identifier))
          (type_or_object
            (generic_type
              (child_annotation
                (simple_identifier)
                (simple_identifier))
              (type_or_object
                (identifier
                  (simple_identifier)))))
          (expression
            (identifier
              (simple_identifier))))
        (release
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))))))

==================
Writing the value a guard holds
==================

let f = [] () => null {
    let g <- counter
    g = g + 1
    g -> counter
}

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (dependency_list)
      (parameter_list)
      (type_or_object
        (type
          (null)))
      (block_expression
        (lock
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))
        (guard_assignment
          (identifier
            (simple_identifier))
          (expression
            (binary_expression
              (expression
                (identifier
                  (simple_identifier)))
              (expression
                (literal
                  (number
                    (integer)))))))
        (release
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))))))

====================================================
Items and fields of items change through a guard
====================================================

let f = [] () => null {
    let g <- xs
    g[0] = 10
    g.members[-1].name = z
    g -> xs
}

---

(source_file
  (assignment
    (identifier
      (simple_identifier))
    (function_definition
      (dependency_list)
      (parameter_list)
      (type_or_object
        (type
          (null)))
      (block_expression
        (lock
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))
        (field_assignment
          (get_expression
            (getter_owner
              (expression
                (identifier
                  (simple_identifier))))
            (expression
              (literal
                (number
                  (integer)))))
          (expression
            (literal
              (number
                (integer)))))
        (field_assignment
          (child_annotation
            (get_expression
              (getter_owner
                (expression
                  (child_annotation
                    (simple_identifier)
                    (simple_identifier))))
              (expression
                (unary_expression
                  (expression
                    (literal
                      (number
                        (integer)))))))
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))
        (release
          (identifier
            (simple_identifier))
          (expression
            (identifier
              (simple_identifier))))))))
